# draken

./: .commitlintrc.js  .editorconfig  .envrc  .gitignore  Cargo.toml  README.md  codecov.yml  flake.nix  nx.json  package.json  pnpm-lock.yaml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: v0aw51w45sy72pkapjvw11fczxcmz4vy-source  ywmrf9fb7p0h00jjwxif1725f43iai0y-source
.github/workflows/: ci.yml
.husky/: pre-commit  prepare-commit-msg
apps/e2e/: cypress.config.ts  project.json  tsconfig.json
apps/gui/: Cargo.toml  project.json  tauri.conf.json
apps/gui/src/: app.rs  lib.rs  main.rs
apps/ui/: .eslintrc.json  jest.config.ts  next.config.js  project.json  tsconfig.json
draken/: Cargo.toml  project.json
lib/api/: Cargo.toml  project.json
lib/bitboard/: project.json
lib/board/: Cargo.toml  project.json
lib/controller/: Cargo.toml  project.json
lib/engine/: Cargo.toml  project.json
lib/fen/: Cargo.toml  project.json
lib/game/: Cargo.toml  project.json
lib/model/: Cargo.toml  project.json
lib/moves/: project.json
lib/pieces/: Cargo.toml  project.json
lib/uci/: Cargo.toml  project.json
lib/view/: Cargo.toml  project.json
libs/api/: project.json
libs/bitboard/: Cargo.toml  project.json
libs/board/: Cargo.toml  project.json
libs/controller/: project.json
libs/draken/: Cargo.toml  project.json
libs/engine/: Cargo.toml  project.json
libs/fen/: project.json
(+250 files in other folders)
